--- a/src/main/resources/static/css/account.css
+++ b/src/main/resources/static/css/account.css
@@ -8,7 +8,7 @@
 }
 
 .form_list{
-    width: 300px;
+    width: 350px;
     margin: auto;
     margin-top: 50px;
     border-radius: 10px;
@@ -43,6 +43,12 @@
     padding: 0 10px 0 70px;
 }
 
+.textarea {
+    width: 100%;
+    height: 6.25em;
+    border: none;
+    resize: none;
+}
 .form_item_day{
     
     
@@ -77,8 +83,6 @@
     width: 400px; /* 원하는 가로 너비로 설정 */
     height: 300px; /* 원하는 세로 높이로 설정 */
     resize: none;
-
-    
 }
 
 .btn_account{
